<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tips2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/putih">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/kembali"
                android:layout_width="48dp"
                android:layout_height="51.55dp"
                android:layout_marginStart="17dp"
                android:background="@drawable/rounded_back_button"
                android:padding="12dp"
                android:layout_marginTop="35dp"
                android:scaleType="fitCenter"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7 Cara agar bisa bangun pagi"
            android:fontFamily="@font/worksans_semibold"
            android:textSize="24dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/hitam"/>

        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/paragraf1"
            android:fontFamily="@font/worksans_semibold"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/hitam"/>
        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/paragraf2"
            android:fontFamily="@font/worksans_semibold"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/hitam"/>

        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/paragraf3"
            android:fontFamily="@font/worksans_semibold"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/hitam"/>
        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/paragraf4"
            android:fontFamily="@font/worksans_semibold"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/hitam"/>
        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/paragraf5"
            android:fontFamily="@font/worksans_semibold"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/hitam"/>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="56sp"
            android:background="@color/biru_paling_tua"
            app:itemIconTint="@color/putih"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_nav" />
    </LinearLayout>

</ScrollView>